@@ -68,6 +68,18 @@ public class Speedget extends MovableWidget {
 	this.max = max;
     }
 
+    @Override
+    protected void added() {
+	super.added();
+    	ui.gui.speed = this;
+    }
+
+    @Override
+    protected void removed() {
+	super.removed();
+	ui.gui.speed = null;
+    }
+
     public void draw(GOut g) {
 	int x = 0;
 	for(int i = 0; i < 4; i++) {
@@ -123,29 +135,18 @@ public class Speedget extends MovableWidget {
 
     public Object tooltip(Coord c, Widget prev) {
 	if((cur >= 0) && (cur < tips.length))
-	    return(String.format("Selected speed: " + tips[cur]));
+	    return(String.format("Selected speed: %s", tips[cur]));
 	return(null);
     }
 
-    public boolean globtype(char key, KeyEvent ev) {
-	if(key == 18) {
-	    if(max >= 0) {
-		int n;
-		if((ev.getModifiersEx() & KeyEvent.SHIFT_DOWN_MASK) == 0) {
-		    if(cur > max)
-			n = 0;
-		    else
-			n = (cur + 1) % (max + 1);
-		} else {
-		    if(cur > max)
-			n = max;
-		    else
-			n = (cur + max) % (max + 1);
-		}
-		set(n);
-	    }
-	    return(true);
+    public void cyclespeed() {
+	if(max >= 0) {
+	    int n;
+	    if(cur > max)
+		n = max;
+	    else
+		n = (cur + 1) % (max + 1);
+	    set(n);
 	}
-	return(super.globtype(key, ev));
     }
 }
